[package]
name = "wxml-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "wxml-compiler"
path = "src/main.rs"

[dependencies]
clap = "4.3.23"
entities = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
pest = "2.7.2"
pest_derive = "2.7.2"
serde_json = "1.0.105"
